DevOps/Project-206-Kubernetes-Microservice-Phonebook/meine-lösung/k8s/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource
# https://kubernetes.github.io/ingress-nginx/user-guide/basic-usage/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phonebook
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 80
      - path: "/result"
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
